fixed navbar z-index issue

--- a/frontend/workout-generator/src/components/styles/NavBar.css
+++ b/frontend/workout-generator/src/components/styles/NavBar.css
@@ -1,5 +1,6 @@
 header {
   background-image:none;
+  z-index: 2500;
 }
 .specific-aactiv {
   font-size: 2rem;
